реализовал задачи из спринта 6